objects/Pass1__c.object
<CustomObject>
    <fields>
        <fullName>Pass1Mobile1__c</fullName>
        <label>Pass1Mobile1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>info__c</fullName>
        <label>info</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infotestarea__c</fullName>
        <label>infotestarea</label>
        <type>TextArea</type>
    </fields>
    <label>Pass1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pass1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pass1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>